Added card api endpoint
